  Number parser would accept multiple sign characters as valid.

- YearMonthDay/TimeOfDay.withChronologyRetainFields
  Previously, switching chronology did not validate the fields, so you could
  end up with an object in an invalid state, such as a YearMonthDay where
  dayOfMonth=31 with Coptic.
  This method can now throw an IllegalArgumentException


Enhancements since 1.0
----------------------
- DateTime/DateMidnight/MutableDateTime/YearMonthDay/TimeOfDay
  Added convenience plusXxx() and minusXxx() methods to add/subtract a period
  For example, dt.plus(Period.days(6)) can now be replaced by dt.plusDays(6)

- DateTime/DateMidnight/MutableDateTime/YearMonthDay/TimeOfDay
  Added convenience toString() method that takes a DateTimeFormatter
  For example, dt.toString(DateTimeFormat.shortDateTime())

- YearMonthDay/TimeOfDay
  Enabled comparisons using Comparable interface
  Added compareTo/isEqual/isAfter/isBefore methods

- YearMonthDay/TimeOfDay
  Extra time zone constructor
  Allows current date and time to be accurately obtained

- DateTime/DateMidnight/MutableDateTime/YearMonthDay/TimeOfDay Property
  Added new method to property class - getAsString()
  Gets the value as a string, not using text values like 'Monday' or 'January'

- Period
  Added constructors to create a Period from two ReadablePartials, such as
  YearMonthDay or TimeOfDay

- PeriodType
  Added three new period types - YearMonthDay, YearWeekDay and YearDay
  These complement the existing ones but exclude the time fields.

- DateTimeFormatter
  Method withPivotYear added to allow the two digit pivot year to be controlled.
  This is most useful after creating a format from a string pattern.

- DateTimeFormatter
  Added lenient parse option to appendTwoDigitYear and appendTwoDigitWeekyear.

- Interval
  Added overlap method that returns the actual overlap between two intervals.

- IllegalFieldValueException
  Added new exception subclass of IllegalArgumentException to capture more